Why We Argue; Carlos Fraenkel.
The Public Value of Philosophy (N. Warburton); Fraenkel's review of
Adamson's history of Islamic philosophy.

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -228,6 +228,12 @@
           religious extremism as well as scientific extremism.
         </blockquote>
       </li>
+      <li>
+        <a href="http://whyweargue.libsyn.com/the-public-value-of-philosophy-with-nigel-warburton">The Public Value of Philosophy with Nigel Warburton</a>,
+        <i class="website">Why We Argue</i>, 27 July 2017 (podcast; 27 minutes).
+        This interview focuses on critical thinking and critical attitudes towards information sources
+        in an age in which repudiate facts instead of engaging in debate.
+      </li>
     </ul>
     <!-- Patrick Gentempo: "Unleashing the power of philosophy", TEDxMinot, 2014: uses "philosophy" in a very lose way. And quotes Ayn Rand's posthumous collection of essays "Philosophy: Who Needs It": https://en.wikipedia.org/wiki/Philosophy:_Who_Needs_It & https://www.youtube.com/watch?v=CXFkG34NGkU -->
 
@@ -1210,6 +1216,12 @@
         on a wide variety of issues ranging from popular culture to our most deeply-held beliefs 
         about science, morality, and the human condition</q>.
         <a href="https://twitter.com/philtalkradio">@philtalkradio</a> is their Twitter account.
+      </li>
+      <li>Fraenkel, Carlos: 
+        <a href="https://lareviewofbooks.org/article/deprovincializing-philosophy/">Deprovincializing Philosophy</a>,
+        <i class="magazine">Los Angeles Review of Books</i>, 29 July 2017.
+        A review of <i class="booktitle">Philosophy in the Islamic World: A History of Philosophy without any gaps, Volume 3</i> 
+        by Peter Adamson, Oxford University Press, 2016.
       </li>
       <li>Nerdwriter:
         <a href="https://www.youtube.com/watch?v=rKhfFBbVtFg">The Death of Socrates: How To Read A Painting</a>:
