GoT content moved on Unpedia.

--- a/humanities/index.html
+++ b/humanities/index.html
@@ -398,103 +398,6 @@
     </blockquote>
 
 
-    <h2 id="got">Pop Culture: Game of Thrones</h2>
-    <ul>
-      <li><abbr>PBS</abbr> NewsHour:
-        <a href="https://www.youtube.com/watch?v=zQ4Umju2VrM">What does a medieval lit scholar see in 'Game of Thrones?'</a>
-        (YouTube, 7 minutes):
-        <a href="http://www.sonoma.edu/english/people/brantley-bryant.html">Brantley L. Bryant</a>,
-        associate professor of early and medieval British literature at Sonoma State University,
-        discusses elements of medieval literature in the <abbr>HBO</abbr> TV show.
-      </li>
-      <li>Mayes T.:
-        <a href="https://www.youtube.com/watch?v=Sc_FkoSFwNM">The Real History Behind Game Of Thrones - Part 1</a>
-        (YouTube, 18 minutes) and
-        <a href="https://www.youtube.com/watch?v=ZJK0TiIcbXw">The Real History Behind Game Of Thrones - Part 2</a>
-        (YouTube, 22 minute).
-        <br />Two important sources are the 
-        <a href="https://en.wikipedia.org/wiki/Wars_of_the_Roses">Wars of the Roses</a> 
-        in 15th-century England and <span lang="fr">Maurice Druon</span>'s series of historival novels
-        <a href="https://en.wikipedia.org/wiki/The_Accursed_Kings" class="booktitle">The Accursed Kings (<span lang="fr">Les Rois maudits</span>)</a>.
-        Valyrian steel was inspired by <a href="https://en.wikipedia.org/wiki/Damascus_steel">Damascus steel</a>, whose method of production has been lost.
-        The Red Wedding was inspired by the
-        <a href="https://en.wikipedia.org/wiki/Clan_Douglas#Black_Dinner">Black Dinner (1440)</a>
-        and the 
-        <a href="https://en.wikipedia.org/wiki/Massacre_of_Glencoe">Massacre of Glencoe (1692)</a>.
-        Cersei's walk of shame was inspired by 
-        <a href="https://en.wikipedia.org/wiki/Jane_Shore#Prison.2C_second_marriage_and_later_life">Jane Shore's penance walk</a> in the late 15th century.
-        The Wall was inspired by <a href="https://en.wikipedia.org/wiki/Hadrian's_Wall">Hadrian's Wall</a>.
-        The Knight's Watch was inspired by 
-        <a href="https://en.wikipedia.org/wiki/Military_order_%28monastic_society%29">military orders</a> such as the
-        <a href="https://en.wikipedia.org/wiki/Knights_Hospitaller">Knights Hospitaller</a> and the
-        <a href="https://en.wikipedia.org/wiki/Knights_Templar">Knights Templar</a>.
-        The Dothraki were inspired by nomadic people like the
-        <a href="https://en.wikipedia.org/wiki/Huns">Huns</a> and the
-        <a href="https://en.wikipedia.org/wiki/Mongols">Mongols</a>.
-        The Unsullied were inspired by slave armies such as the 
-        <a href="https://en.wikipedia.org/wiki/Mamluk">Mamluks</a> and the
-        <a href="https://en.wikipedia.org/wiki/Janissaries">Janissaries</a>.
-        The fighting pits of Meereen were inspired by the
-        <a href="https://en.wikipedia.org/wiki/Gladiator">gladiator games</a> in Ancient Rome.
-        The Sons of the Harpy use daggers and know how to blend into the crowd after attacking people;
-        this is reminiscent of the
-        <a href="https://en.wikipedia.org/wiki/Sicarii">Sicarii</a>
-        in Jerusalem in the first century <abbr>AD</abbr>.
-      </li>
-      <li>History Buffs:
-        <a href="https://www.youtube.com/watch?v=knGeCNaAdAU">Why Game of Thrones reads like a History Book and not a Fantasy Epic</a>
-        (YouTube, 20 minutes).
-      </li>
-      <li>Business Insider: 
-        <a href="https://www.youtube.com/watch?v=wSTZFf0NKUI">Game of Thrones: Economics of Westeros</a>
-        (YouTube, 4 minutes).
-      </li>
-      <li>It's Okay to Be Smart: 
-        <a href="https://www.youtube.com/watch?v=Utu-LpJn3Is">The Science of Game of Thrones</a>
-        (YouTube, 8 minutes).
-      </li>
-      <li>Jacoby, Henry:
-        <i class="booktitle">Game of Thrones and Philosophy: Logic Cuts Deeper Than Swords</i>.
-        Wiley, 2012. (320 pages).
-        <a href="http://eu.wiley.com/WileyCDA/WileyTitle/productCd-1118161998.html"><abbr>ISN</abbr> 978-1-118-16199-9</a>.
-      </li>
-      <!-- See also the great philosopher Sandor Clegane: "What the fuck is a Lommy?" https://www.youtube.com/watch?v=VANR3D7-TdQ -->
-      <li>Rothman, Lily:
-        <a href="http://time.com/104625/game-of-thrones-moon-door/">The Physics of the <i>Game of Thrones</i> “Moon Door”</a>,
-        <i class="magazine">Time</i>, 19.05.2014.
-      </li>
-      <li>Kyle Kallgren:
-        <a href="https://www.youtube.com/watch?v=cFzTKhdLdks">Game of Thrones and History - Between the Lines</a>
-        (YouTube, 10 minutes, July 2014).
-        <br />Kyle Kallgren cites Umberto Eco's paper
-        <a href="https://philpapers.org/rec/ECODOT">Dreaming of the Middle Ages</a> (1987).
-        See also
-        <a href="https://en.wikipedia.org/wiki/Neo-medievalism">neo-medievalism</a>
-        on Wikipedia.
-      </li>
-    </ul>
-    <p>There may be more historical inspirations than are mentioned in the above sources.
-      For example, the family name
-      <a href="https://en.wikipedia.org/wiki/List_of_A_Song_of_Ice_and_Fire_characters#House_Martell">Martell</a>
-      is almost identical to 
-      <a href="https://en.wikipedia.org/wiki/Charles_Martel">Charles Martel's</a> cognomen ("hammer"; "Martell" in German).
-      Charles Martel fought important battles against Islamic forces, which has a kind of parallel to Dorne's resistance against the Targaryens, who also come from the east.
-      Was Robert Baratheon's war hammer inspired by Charles Martel? 
-      Was the <a href="https://www.youtube.com/watch?v=nhc283pXcjQ">battle of Qohor</a>, 
-      in which Dothraki cavalry charges again and again on the Unsullied inspired by
-      the <a href="https://en.wikipedia.org/wiki/Battle_of_Tours">battle of Tours</a>,
-      in which the Islamic cavalry repeatedly charged against the Frankish infantry?
-      (See this YouTube video about the <a href="https://www.youtube.com/watch?v=q8q0PpIUN4g">Battle of Tours/Poitiers in 732</a>.)
-      <br /><a href="https://en.wikipedia.org/wiki/Tywin_Lannister">Tywin Lannister</a>'s first name
-      looks almost identical to the name of the Welsh town
-      <a href="https://en.wikipedia.org/wiki/Tywyn">Tywyn</a>, but the pronunciation is quite different.
-      The pie made out of his two sons that Walder Frey eats was probably inspired by the end of
-      Shakespeare's play 
-      <a href="https://en.wikipedia.org/wiki/Titus_Andronicus">Titus Andronicus</a>,
-      where Titus serves Tamora a pie made from the flesh of her sons Chiron and Demetrius.
-    </p>
-    <!-- Game of Thrones Cello Cover - Break of Reality: https://www.youtube.com/watch?v=ydRAb9cwHnA -->
-
     <h2>Miscellaneous Other Links</h2>
     <ul>
       <li>The Gombrich Archive:
@@ -543,6 +446,11 @@
         <i class="blog">Open Culture</i>, 05.05.2016.
       </li>
     </ul>
+
+    <p id="got">The content about <i>Game of Thrones</i> has been moved 
+      <a href="https://cstrobbe.github.io/unpedia/P_Literature/PS_AmericanLiterature/PS_Martin-George-R-R/asoiaf.html">to a different website</a>.
+    </p>
+
   </main>
 
   <footer>
