Ramsey: Eat Complete; several deletions.

--- a/lijst.html
+++ b/lijst.html
@@ -54,10 +54,10 @@
 
   <h2>Science and Philosophy</h2>
   <ul>
-    <li>Parkin, Alan J.: 
+    <li><del>Parkin, Alan J.: 
       <strong><i class="booktitle">Essential Cognitive Psychology</i></strong>. 
       [2001] Routlege, 2014.
-      <a href="https://www.routledge.com/Essential-Cognitive-Psychology-Classic-Edition/Parkin/p/book/9781848722477"><abbr>ISBN</abbr> 9781848722477</a>.
+      <a href="https://www.routledge.com/Essential-Cognitive-Psychology-Classic-Edition/Parkin/p/book/9781848722477"><abbr>ISBN</abbr> 9781848722477</a>.</del>
     </li>
     <li>Scholar, Richard:
       <i class="booktitle">Montaigne and the Art of Free-Thinking</i>.
@@ -69,12 +69,12 @@
       Vintage, 2011. (400 pages)
       <a href="https://www.penguin.co.uk/books/1036899/how-to-live/"><abbr>ISBN</abbr> 9780099485155</a>.
     </li>
-    <li>Booth, Wayne C.; Colomb, Gregory C.; Williams, Joseph M.: 
+    <li><del>Booth, Wayne C.; Colomb, Gregory C.; Williams, Joseph M.: 
       <i class="booktitle">The Craft of Research</i>.
       4th edition. University of Chicago Press, 2016.
       <a href="http://press.uchicago.edu/ucp/books/book/chicago/C/bo23521678.html"><abbr>ISBN</abbr> 9780226239736</a>.
       (3rd edition. University of Chicago Press, 2008.
-      <abbr>ISBN</abbr> 978 02 26 06 56 63. (? 18 €))
+      <abbr>ISBN</abbr> 978 02 26 06 56 63. (? 18 €))</del>
     </li>
     <li>Weston, Anthony: <i class="booktitle">A Rulebook for Arguments</i>.
       4th edition. Hackett Publishing, 2008.
@@ -280,14 +280,14 @@
       New Cambridge Shakespeare Studies and Supplementary Texts. Cambridge University Press, 2009.
       <a href="http://www.cambridge.org/de/academic/subjects/literature/renaissance-and-early-modern-literature/problem-reign-king-edward-iii-statistical-approach?format=PB"><abbr>ISBN</abbr> 9780521123488</a>.
     </li>
-    <li>Salzman, Paul (editor): <i class="booktitle">An Anthology of Elizabethan Prose Fiction</i>. 
+    <li><del>Salzman, Paul (editor): <i class="booktitle">An Anthology of Elizabethan Prose Fiction</i>. 
       Oxford University Press, 2008. (464 pages) 
       <a href="https://global.oup.com/academic/product/an-anthology-of-elizabethan-prose-fiction-9780199540570"><abbr>ISBN</abbr> 9780199540570</a>.
       (Contains five works: George Gascoigne's <i class="booktitle">The Adventures of Master F. J</i>; 
       John Lyly's <i class="booktitle">Euphues: The Anatomy of Wit</i>; 
       Robert Greene's <i class="booktitle">Pandosto. The Triumph of Time</i>; 
       Thomas Nashe's <i class="booktitle">The Unfortunate Traveller</i> and 
-      Thomas Deloney's <i class="booktitle">Jack of Newbury</i>.)
+      Thomas Deloney's <i class="booktitle">Jack of Newbury</i>.)</del>
     </li>
     <li>Kermode, Lloyd (editor): <i class="booktitle">Three Renaissance usury plays: The Three Ladies of London, Englishmen for My Money, The Hog Hath Lost His Pearl</i>.
       Manchester University Press, 2014. (396 pages)
@@ -347,6 +347,10 @@
     <li>Radford, Andrew: <i class="booktitle">An Introduction to English Sentence Structure</i>.
       Cambridge University Press, 2009. (456 pages)
       <a href="http://www.cambridge.org/gb/academic/subjects/languages-linguistics/grammar-and-syntax/introduction-english-sentence-structure?format=PB"><abbr>ISBN</abbr> 9780521731904</a>.
+    </li>
+    <li>Ramsey, Drew: <i class="booktitle">Eat Complete: The 21 Nutrients That Fuel Brainpower, Boost Weight Loss, and Transform Your Health</i>. 
+      Harper Wave, 2016. (304 pages)
+      <a href="http://www.harperwave.com/book/9780062413437/Eat-Complete-Drew-Ramsey/"><abbr>ISBN</abbr> 9780062413437</a>.
     </li>
     <!-- 
     <li> : <i class="booktitle"></i>. 
