P. Boghossian on David Pakman Show.

--- a/philosophy/thinking.html
+++ b/philosophy/thinking.html
@@ -185,6 +185,13 @@
         in which the author excerpted seven tools from his book
         <i class="booktitle">Intuition Pumps and Other Tools for Thinking</i>.
       </li>
+      <li>Peter Boghossian on the David Pakman Show:
+        <a href="https://www.youtube.com/watch?v=-XwM3oGlOBQ">Faith <abbr>vs</abbr> Knowledge (<abbr>Pt</abbr> 1)</a> (12 minutes),
+        <a href="https://www.youtube.com/watch?v=zKdeAQjTXEE">Defund "Radical Ideologues" in Gender Studies (<abbr>Pt</abbr> 2)</a> (15 minutes),
+        <a href="https://www.youtube.com/watch?v=IE-11V7w5cA">Does White Privilege Exist? (<abbr>Pt</abbr> 3)</a> (12 minutes),
+        <a href="https://www.youtube.com/watch?v=kaJXRrBEdao">What Happened to Critical Thinking? (<abbr>Pt</abbr> 3)</a> (10 minutes).
+        Uploaded on 1 August 2017.
+      </li>
     </ul>
     <!-- Many questions about teaching and assessing critical thinking on ResearchGate:
       * Do you know anyone who has written a number of research (quantitative and qualitative) on critical thinking? : https://www.researchgate.net/post/Do_you_know_anyone_who_has_written_a_number_of_research_quantitative_and_qualitative_on_critical_thinking
