Metzinger: BAAN (Edge).

--- a/philscience/index.html
+++ b/philscience/index.html
@@ -581,7 +581,7 @@
     </ul>
 
 
-    <h2>Other Resources</h2>
+    <h2>Other Links</h2>
     <ul>
       <li>
         <a href="http://journal.philsci.org/" class="journal">Philosophy of Science</a>
@@ -731,6 +731,11 @@
       <li><span lang="de">Mittelstraß, Jürgen</span>:
         <a href="https://www.youtube.com/watch?v=mJbkigqkz34">Some Epistemological Aspects in the Philosophy of Science</a>,
         recording of a lecture at the University of Innsbruck on 27.01.2015. 
+      </li>
+      <li>Metzinger, Thomas:
+        <a href="https://www.edge.org/conversation/thomas_metzinger-benevolent-artificial-anti-natalism-baan">Benevolent Artificial Anti-Natalism (<abbr>BAAN</abbr>)</a>,
+        <i class="magazine">Edge</i>, August 2017.
+        <!-- @@check. philosophy of technology? -->
       </li>
       <!--li>Shermer, Michael: 
         <a href="@@"><i>Scientia Humanitatis</i>: Reason, empiricism and skepticism are not virtues of science alone</a>,
