Meyer: How to Present Scientific Findings Online.

--- a/science/doctoral-research.html
+++ b/science/doctoral-research.html
@@ -188,6 +188,11 @@
         <a href="https://www.researchgate.net/post/How_can_one_make_a_great_Researcher">How can one make a great Researcher?</a>
         (discussion on ResearchGate).
       </li>
+      <li>Meyer, Kate:
+        <a href="https://www.nngroup.com/articles/scientific-findings-online/">How to Present Scientific Findings Online</a>,
+        <i class="magazine">Nielsen Norman Group</i>, 06.08.2017.
+        <!-- @@check -->
+      </li>
       <!-- 
       <li>
         <a href=""></a>
