+ Shaxson, Bernays, Lippmann.

--- a/lijst.html
+++ b/lijst.html
@@ -259,6 +259,12 @@
       <a href="http://www.fayard.fr/le-livre-noir-de-lagriculture-9782213656038"><abbr>ISBN</abbr> 9782213656038</a>.
       <!-- reprint Pluriel, 2012: http://www.fayard.fr/le-livre-noir-de-lagriculture-9782818502242  -->
     </li>
+    <li>Shaxson, Nicholas:
+      <i class="booktitle">Treasure Islands: Tax Havens and the Men who Stole the World</i>.
+      Vintage, 2012. (384 pages)
+      <a href="https://www.penguin.co.uk/books/1085201/treasure-islands/9780099541721/"><abbr>ISBN</abbr> 978 0099541721</a>.
+      <!-- Mentioned by Mark Blyth at https://www.youtube.com/watch?v=KSYb6RbuOG0  -->
+    </li>
   </ul>
 
   <h2>Literature</h2>
@@ -351,6 +357,17 @@
     <li>Ramsey, Drew: <i class="booktitle">Eat Complete: The 21 Nutrients That Fuel Brainpower, Boost Weight Loss, and Transform Your Health</i>. 
       Harper Wave, 2016. (304 pages)
       <a href="http://www.harperwave.com/book/9780062413437/Eat-Complete-Drew-Ramsey/"><abbr>ISBN</abbr> 9780062413437</a>.
+    </li>
+    <li>Bernays, Edward: <i class="booktitle">Crystallizing Public Opinion</i> (1923). 
+      <a href="https://en.wikipedia.org/wiki/Crystallizing_Public_Opinion"><abbr>ISBN</abbr> 978-1935439264</a> (reprinted by Ig Publishing).
+      <!-- https://www.amazon.de/Crystallizing-Public-Opinion-Edward-Bernays/dp/193543926X/ -->
+    </li>
+    <li>Lippann, Walter: <i class="booktitle">The Phantom Public</i> (1925). 
+      <a href="https://en.wikipedia.org/wiki/The_Phantom_Public"><abbr>ISBN</abbr> 978-1560006770</a>.
+    </li>
+    <li>Bernays, Edward: <i class="booktitle">Propaganda</i> (1928). 
+      <a href="https://en.wikipedia.org/wiki/Propaganda_(book)"><abbr>ISBN</abbr> 978-0970312594</a> (reprinted by Ig Publishing, 2004).
+      <!-- https://www.amazon.de/gp/product/0970312598/ -->
     </li>
     <!-- 
     <li> : <i class="booktitle"></i>. 
