Wikipedia: R, S, GNU Octave.

--- a/science/mathematics.html
+++ b/science/mathematics.html
@@ -158,6 +158,15 @@
       <li>Wikipedia:
         <a href="https://en.wikipedia.org/wiki/Survivorship_bias">Survivorship bias or survival bias</a>.
       </li>
+      <li>Wikipedia:
+        <a href="https://en.wikipedia.org/wiki/S_%28programming_language%29">S (programming language)</a>.
+      </li>
+      <li>Wikipedia:
+        <a href="https://en.wikipedia.org/wiki/R_%28programming_language%29">R (programming language)</a>.
+      </li>
+      <li>Wikipedia:
+        <a href="https://en.wikipedia.org/wiki/GNU_Octave"><abbr>GNU</abbr> Octave</a>.
+      </li>
     </ul>
 
     <h3>Geoff Cumming: The New Statistics</h3>
