--- a/science/doctoral-research.html
+++ b/science/doctoral-research.html
@@ -52,12 +52,13 @@
   </nav>
 
   <main>
-    <!--blockquote id="introquote">
+    <blockquote id="introquote">
       <p>
-        <q>@@quote</q>
-        <cite>@@author: <span class="booktitle">@@title</span>.</cite>
+        <q>It is a good thing for a research scientist to discard a pet hypothesis every day before breakfast.</q>
+        <cite>Konrad Lorenz: <span class="booktitle">On Aggression</span>, 1966</cite>
+        <!-- https://en.wikiquote.org/wiki/Research -->
       </p>
-    </blockquote-->
+    </blockquote>
 
     <h2>Books and Articles on Doctoral Research and Thesis Writing</h2>
     <ul>
