Chomsky: Profit over People (1999).

--- a/lijst.html
+++ b/lijst.html
@@ -230,6 +230,12 @@
       Penguin, 2005, 2013. (1056 pages)
       <a href="http://www.penguinrandomhouse.com/books/321570/john-maynard-keynes-by-robert-skidelsky/"><abbr>ISBN</abbr> 9780143036159</a>.
     </li>
+    <li>Chomsky, Noam; McChesney, Robert: <i class="booktitle">Profit Over People: Neoliberalism and Global Order</i>. Seven Stories Press, 1999. (176 pages)
+      <a href="https://www.sevenstories.com/books/3435-profit-over-people"><abbr>ISBN</abbr> 9781888363821</a> 
+      (e-book: <abbr>ISBN</abbr> 9781609802912; 
+      <a href="https://archive.org/stream/NoamChomskyNecessaryIllusions/Noam%20Chomsky/Noam%20Chomsky%20-%20Profit%20Over%20People#page/n0/mode/2up">German translation on Archive.org</a>).
+      <br />(<a href="https://www.sevenstories.com/collections/chomsky">Other books by Chomsky</a> published by Seven Stories Press.)
+    </li>
     <li>Varoufakis, Yanis: <i class="booktitle">The Global Minotaur</i>.
       Zed Books, 2011. 3nd edition, 2015.
       <a href="https://www.zedbooks.net/shop/book/the-global-minotaur/"><abbr>ISBN</abbr> 9781783606108</a>.
@@ -369,7 +375,7 @@
       <a href="https://en.wikipedia.org/wiki/Propaganda_(book)"><abbr>ISBN</abbr> 978-0970312594</a> (reprinted by Ig Publishing, 2004).
       <!-- https://www.amazon.de/gp/product/0970312598/ -->
     </li>
-    <!-- 
+    <!--
     <li> : <i class="booktitle"></i>. 
       <a href=""><abbr>ISBN</abbr> </a>.
     </li>
