--- a/lijst.html
+++ b/lijst.html
@@ -118,7 +118,7 @@
     </li>
     <li>Goodman, Nelson: <i class="booktitle">Fact, Fiction, and Forecast</i>.
       Harvard University Press, 1983. 
-      <abbr>ISBN</abbr> 978 06 74 29 07 16. (? 18 €)
+      <a href="http://www.hup.harvard.edu/catalog.php?isbn=9780674290716"><abbr>ISBN</abbr> 978 06 74 29 07 16</a>. (? 18 €)
     </li>
     <li>Hume, David: 
       <strong><i class="booktitle">An Enquiry concerning Human Understanding</i></strong>.
@@ -135,7 +135,7 @@
     </li>
     <li>Goldstein, Rebecca Newberger: <i class="booktitle">Plato at the Googleplex: Why Philosophy Won't Go Away</i>.
       Random House/Atlantic Books, 2014.
-      <abbr>ISBN</abbr> 978 17 82 39 55 77. (? 25 €)
+      <a href="http://atlantic-books.co.uk/book/plato-at-the-googleplex/"><abbr>ISBN</abbr> 978 17 82 39 55 91</a> / 978 17 82 39 55 77. (? 25 €)
     </li>
     <li>Osbeck, Lisa M.; Nersessian, Nancy J.; Malone, Kareen R.; Newstetter, Wendy C.: 
       <i class="booktitle">Science as Psychology: Sense-Making and Identity in Science Practice</i>. 
