--- a/lijst.html
+++ b/lijst.html
@@ -86,11 +86,11 @@
     </li>
     <li lang="nl">van Loocke, Philip: <i class="booktitle">Het wereldbeeld van de wetenschap</i>.
       Garant, 2008.
-      <abbr>ISBN</abbr> 9789044121667.
+      <a href="http://www.maklu.be/MakluEnGarant/BookDetails.aspx?id=9789044121667"><abbr>ISBN</abbr> 9789044121667</a>.
     </li>
     <li>Ayer, A. J.: <i class="booktitle">Language, Truth and Logic</i>.
       Dover.
-      <abbr>ISBN</abbr> 9780486200101. (? 10 €)
+      <a href="http://store.doverpublications.com/0486200108.html"><abbr>ISBN</abbr> 9780486200101</a>. (? 10 €)
     </li>
     <li>Ayer, A. J.: <i class="booktitle">Logical Positivism</i>. 
       Free Press, 1966.
@@ -288,10 +288,6 @@
       Cambridge University Press, 2012.
       <a href="http://www.cambridge.org/de/academic/subjects/literature/english-literature-general-interest/shakespeare-computers-and-mystery-authorship?format=PB"><abbr>ISBN</abbr> 9781107407084</a>.
     </li>
-    <li>Slater, Eliot: <i class="booktitle">The Problem of The Reign of King Edward III: A Statistical Approach</i>. 
-      New Cambridge Shakespeare Studies and Supplementary Texts. Cambridge University Press, 2009.
-      <a href="http://www.cambridge.org/de/academic/subjects/literature/renaissance-and-early-modern-literature/problem-reign-king-edward-iii-statistical-approach?format=PB"><abbr>ISBN</abbr> 9780521123488</a>.
-    </li>
     <li><del>Salzman, Paul (editor): <i class="booktitle">An Anthology of Elizabethan Prose Fiction</i>. 
       Oxford University Press, 2008. (464 pages) 
       <a href="https://global.oup.com/academic/product/an-anthology-of-elizabethan-prose-fiction-9780199540570"><abbr>ISBN</abbr> 9780199540570</a>.
@@ -327,6 +323,14 @@
       <i class="booktitle">The Collected Works</i>, edited by Gary Taylor and John Lavagnino.
       Oxford University Press, 2010. (2016 pages)
       <a href="https://global.oup.com/academic/product/thomas-middleton-the-collected-works-9780199580538"><abbr>ISBN</abbr> 9780199580538</a>.
+    </li>
+    <li>White, T. H.: <i class="booktitle">The Once and Future King</i>. HarperCollins, 2015. (864 pages)
+      <a href="https://www.harpercollins.co.uk/9780008108588/the-once-and-future-king"><abbr>ISBN</abbr> 9780008108588</a> (paperback)/
+      <a href="https://www.harpercollins.co.uk/9780007491544/the-once-and-future-king"><abbr>ISBN</abbr> 9780007491544</a> (hardcover).
+    </li>
+    <li>Slater, Eliot: <i class="booktitle">The Problem of The Reign of King Edward III: A Statistical Approach</i>. 
+      New Cambridge Shakespeare Studies and Supplementary Texts. Cambridge University Press, 2009.
+      <a href="http://www.cambridge.org/de/academic/subjects/literature/renaissance-and-early-modern-literature/problem-reign-king-edward-iii-statistical-approach?format=PB"><abbr>ISBN</abbr> 9780521123488</a>.
     </li>
   </ul>
 
