--- a/humanities/index.html
+++ b/humanities/index.html
@@ -450,6 +450,10 @@
         01.04.2011. In the <abbr>UK</abbr>,
         <q>Nine out of 10 (90%) exam papers were based on three books alone, all published after 1930 – <i class="booktitle">Of Mice And Men</i>, <i class="booktitle">Lord Of The Flies</i>, and <i class="booktitle">To Kill A Mockingbird</i>.</q>
       </li>
+      <li>Shermer, Michael:
+        <a href="https://www.scientificamerican.com/article/the-unfortunate-fallout-of-campus-postmodernism/">The Unfortunate Fallout of Campus Postmodernism</a>,
+        <i class="magazine">Scientific American</i>, September 2017.
+      </li>
     </ul>
 
     <p id="got">The content about <i>Game of Thrones</i> has been moved 
