Dawkins: Unscientific Belief (BigThink).

--- a/science/index.html
+++ b/science/index.html
@@ -718,6 +718,10 @@
         <a href="https://www.youtube.com/watch?v=rodEjsy66s8">Kids Will Now Take "Anti-Science" Classes</a>
         (YouTube, 27 May 2017, 7 minutes). The video discusses a law in Florida.
       </li>
+      <li>Richard Dawkins:
+        <a href="https://www.youtube.com/watch?v=n3MmXmAACUM">2 Flaws Plague Unscientific Belief, from Trump &amp; Alt-Right to Religious Doctrine</a>
+        (BigThink on YouTube, 5 minutes, 15.08.2017).
+      </li>
       <!-- 
       <li>
         <a href=""></a>
