--- a/lijst.html
+++ b/lijst.html
@@ -218,6 +218,10 @@
       2nd edition. University of Chicago Press, 2008. (480 pages)
       <a href="http://press.uchicago.edu/ucp/books/book/chicago/B/bo5550077.html"><abbr>ISBN</abbr> 9780226482057</a>. (? 21 €)
     </li>
+    <li><i class="booktitle">Froissart's Chronicles</i>. Edited and translated by John Jolliffe.
+      Faber &amp; Faber, 2012. (480 pages)
+      <a href="https://www.faber.co.uk/9780571290222-froissarts-chronicles.html"><abbr>ISBN</abbr> 9780571290222</a>.
+    </li>
   </ul>
 
   <h2>Economics and Politics</h2>
