Adamson on Arabic translators of Greek philosophy.

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1235,6 +1235,10 @@
         <a href="https://en.wikipedia.org/wiki/Jacques-Louis_David" hreflang="en" lang="fr">Jacques-Louis David</a>
         (1748-1825).
       </li>
+      <li>Adamson, Peter:
+        <a href="https://aeon.co/ideas/arabic-translators-did-far-more-than-just-preserve-greek-philosophy">Arabic translators did far more than just preserve Greek philosophy</a>,
+        <i class="magazine">Aeon</i>, no date. Licence: <abbr title="Creative Commons Attribution-NoDerivatives">CC BY-ND</abbr>.
+      </li>
       <!-- @@move to humanities
         https://twitter.com/redaktionmerkur
       <li>
