+ John Searle: book and several lectures.

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1134,6 +1134,22 @@
       </li>
     </ul>
 
+    <h3>John Searle (born 1932)</h3>
+    <ul>
+      <li>Searle, John R.: 
+        <i class="booktitle">Mind: A Brief Introduction</i>. Fundamentals of Philosophy Series. Oxford University Press, 2005. (240 pages)
+        <a href="https://global.oup.com/academic/product/mind-9780195157345"><abbr>ISBN</abbr> 9780195157345</a>.
+      </li>
+      <li>Searle, John R.: 
+        <a href="https://archive.org/details/Philosophy_133_001_Fall_2010_UC_Berkeley_Philosophy_of_Language">Philosophy of Language</a>:
+        recordings of the lectures for the course Philosophy 133 001 at the University of California at Berkeley, 2010.
+        Licence: Creative Commons 3.0: Attribution-NonCommercial-NoDerivs.
+        <br />See also the YouTube playlist
+        <a href="https://www.youtube.com/playlist?list=PL553DCA4DB88B0408">Searle: 3 Philosophy Courses (UC Berkeley)</a> 
+        (84 videos). The three courses are Philosophy of Mind (Spring 2011), Philosophy of Society (Fall 2010) and Philosophy of Language (Fall 2010).
+      </li>
+    </ul>
+
     <h2>Intellectual Impostures</h2>
     <ul>
       <li>In 1997, Alan Sokal &amp; Jean Bricmont published the book
@@ -1253,8 +1269,7 @@
       "Which philosophers of our time have achieved the greatest clarity?" (asked by Nigel Warburton): https://aeon.co/conversations/which-philosophers-of-our-time-have-achieved-the-greatest-clarity-2 
       "Has the New Atheist movement done more harm than good?" (asked by Srinath Sundareswaran): https://aeon.co/conversations/has-the-new-atheist-movement-done-more-harm-than-good
       
-      * John R. Searle: Mind: A Brief Introduction. Oxford University Press. 
-      * Graham Priest: Logic: A Very Shot Introduction. Oxford University Press.  (!! but see reviews at http://www.amazon.com/Logic-Short-Introduction-Graham-Priest/dp/0192893203/ )
+      * Graham Priest: Logic: A Very Short Introduction. Oxford University Press.  (!! but see reviews at http://www.amazon.com/Logic-Short-Introduction-Graham-Priest/dp/0192893203/ )
       * James Ladyman; Don Ross: Every Thing Must Go: Metaphysics Naturalized. Oxford University Press, 2009.
       * ? Kathryn Schulz:Being Wrong: Adventures in the Margin of Error. Ecco, 2011. 
       * ? James Robert Brown: Philosophy of Mathematics: A Contemporary Introduction to the World of Proofs and Pictures. Routledge, 2008.
