Z. Lesser: Hamlet After Q1.

--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -1062,6 +1062,11 @@
         search interface for the text of the First Folio.
         <!-- See also ARTFL Project: http://artfl-project.uchicago.edu/ -->
       </li>
+      <li>Lesser, Zachary:
+        <i class="booktitle">Hamlet After Q1: An Uncanny History of the Shakespearean Text</i>.
+        Material Texts. University of Pennsylvania Press, 2014 (2016). (304 pages)
+        <a href="http://www.upenn.edu/pennpress/book/15298.html"><abbr>ISBN</abbr> 9780812223569</a>.
+      </li>
       <!-- 
         * Editing, Performance, Texts: New Practices in Medieval and Early Modern English Drama. Palgrave Macmillan, 2004. https://www.amazon.de/Editing-Performance-Texts-Practices-Medieval/dp/1349457639/ 
       -->
