K. Bartlett: Renaissance Books.

--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -1232,6 +1232,15 @@
         Bobbitt is the author of
         <i class="booktitle">The Garments of Court and Palace: Machiavelli and the World That He Made</i>.
       </li>
+      <li>
+        <a href="http://fivebooks.com/interview/ken-bartlett-renaissance-books/">Kenneth Bartlett recommends the best Renaissance Books</a>, 
+        <i class="website">Five Books</i> (no date).
+        The five recommendations are Machiavelli’s <i class="booktitle">The Prince</i>, 
+        Francesco Guicciardini’s <i class="booktitle">Ricordi</i>, 
+        Baldasare Castiglione’s <i class="booktitle">The Courtier</i>, 
+        Giorgio Vasari’s <i class="booktitle">Lives of the Artists</i> and
+        Benvenuto Cellini’s <i class="booktitle">Autiobiography</i>.
+      </li>
       <!-- https://www.youtube.com/watch?v=u2FANdhTDyI 10. New Modes and Orders: Machiavelli's The Prince (chaps. 1-12)  - YaleCourses -->
     </ul>
 
