Limits of ML and No Free Lunch.

--- a/science/index.html
+++ b/science/index.html
@@ -732,6 +732,16 @@
       -->
     </ul>
 
+    <h2>Unsorted Links</h2>
+    <ul>
+      <li>Dunietz, Jesse: 
+        <a href="http://nautil.us/blog/-the-fundamental-limits-of-machine-learning">The Fundamental Limits of Machine Learning</a>,
+        <i class="magazine">Nautilus</i>, 14.08.2017.
+      </li>
+      <li>Sewell, Martin: 
+        <a href="http://no-free-lunch.org/">No Free Lunch Theorems</a>.
+      </li>
+    </ul>
     <!--
       * Vox: "Why the Myers-Briggs test is totally meaningless", Vox, 08.10.2015, 4 minutes: https://www.youtube.com/watch?v=Q5pggDCnt5M 
     -->
