Myth of Willpower.

--- a/science/index.html
+++ b/science/index.html
@@ -722,12 +722,12 @@
         <a href="https://www.youtube.com/watch?v=n3MmXmAACUM">2 Flaws Plague Unscientific Belief, from Trump &amp; Alt-Right to Religious Doctrine</a>
         (BigThink on YouTube, 5 minutes, 15.08.2017).
       </li>
-      <!-- 
+      <!--
       <li>
         <a href=""></a>
       </li>
       -->
-      <!-- 
+      <!--
         * Richard Milne: "Critical Thinking on Climate Change: Separating Skepticism from ..." (Uni of Edinburgh): https://www.youtube.com/watch?v=gh9kDCuPuU8 
       -->
     </ul>
@@ -741,10 +741,15 @@
       <li>Sewell, Martin: 
         <a href="http://no-free-lunch.org/">No Free Lunch Theorems</a>.
       </li>
+      <li>Fisher, Carl Erik: 
+        <a href="http://nautil.us/issue/45/power/against-willpower">Against Willpower</a>,
+        <i class="magazine">Nautilus</i>, 02.02.2017.
+      </li>
+      <li>Gallagher, Brian:
+        <a href="http://nautil.us/blog/the-pernicious-myth-of-willpower">The Pernicious Myth of Willpower</a>,
+        <i class="magazine">Nautilus</i>, 18.08.2017.
+      </li>
     </ul>
-    <!--
-      * Vox: "Why the Myers-Briggs test is totally meaningless", Vox, 08.10.2015, 4 minutes: https://www.youtube.com/watch?v=Q5pggDCnt5M 
-    -->
   </main>
 
   <footer>
