More links re. Monty Hall problem.

--- a/science/mathematics.html
+++ b/science/mathematics.html
@@ -149,8 +149,13 @@
     <ul>
       <li>
         <a href="https://en.wikipedia.org/wiki/Monty_Hall_problem">Monty Hall problem</a> on Wikipedia.
-        (See also <a href="https://www.youtube.com/watch?v=zODxrtj156I">A Paradox that Fooled 1,000 PhDs!</a>
-        on the Scam School channel on YouTube.)
+        (See also 
+        <a href="https://www.youtube.com/watch?v=4Lb-6rxZxx0">Monty Hall Problem</a>
+        by Numberphile, 
+        <a href="https://www.youtube.com/watch?v=ggDQXlinbME">The math problem that stumped thousands of mansplainers</a>
+        by Vox and
+        <a href="https://www.youtube.com/watch?v=zODxrtj156I">A Paradox that Fooled 1,000 PhDs!</a>
+        by Scam School, all on YouTube.)
       </li>
       <li>Wikipedia:
         <a href="https://en.wikipedia.org/wiki/Base_rate_fallacy">Base rate fallacy</a>.
