--- a/science/index.html
+++ b/science/index.html
@@ -732,6 +732,7 @@
       -->
     </ul>
 
+
     <h2>Unsorted Links</h2>
     <ul>
       <li>Dunietz, Jesse: 
@@ -741,13 +742,17 @@
       <li>Sewell, Martin: 
         <a href="http://no-free-lunch.org/">No Free Lunch Theorems</a>.
       </li>
-      <li>Fisher, Carl Erik: 
-        <a href="http://nautil.us/issue/45/power/against-willpower">Against Willpower</a>,
-        <i class="magazine">Nautilus</i>, 02.02.2017.
+      <li>Coren, Stanley:
+        <a href="https://www.psychologytoday.com/blog/canine-corner/201412/why-dogs-eat-grass-myth-debunked">Why Dogs Eat Grass—a Myth Debunked</a>,
+        <i class="blog">Psychology Today: Canine Corner</i>, 18.12.2014.
       </li>
-      <li>Gallagher, Brian:
-        <a href="http://nautil.us/blog/the-pernicious-myth-of-willpower">The Pernicious Myth of Willpower</a>,
-        <i class="magazine">Nautilus</i>, 18.08.2017.
+      <li>Riggio, Ronald E.:
+        <a href="https://www.psychologytoday.com/blog/cutting-edge-leadership/201202/what-people-believe-is-true-is-frequently-wrong">What People Believe Is True Is Frequently Wrong</a>,
+        <i class="blog">Psychology Today: Cutting-Edge Leadership</i>, 14.02.2012.
+      </li>
+      <li>Riggio, Ronald E.:
+        <a href="https://www.psychologytoday.com/blog/cutting-edge-leadership/201201/is-psychology-or-common-sense-more-accurate">Is Psychology or Common Sense More Accurate?</a>,
+        <i class="blog">Psychology Today: Cutting-Edge Leadership</i>, 03.01.2012.
       </li>
     </ul>
   </main>
