--- a/science/index.html
+++ b/science/index.html
@@ -615,7 +615,16 @@
         about the research on ego depletion, which was probably influenced by publication bias.
     -->
 
-    <!--h2>Science Myths</h2-->
+    <h2>Science Myths</h2>
+    <ul>
+      <li>Scudellari, Megan:
+        <a href="http://www.nature.com/news/the-science-myths-that-will-not-die-1.19022">The science myths that will not die</a>,
+        <i class="journal">Nature</i>, Volume 528, Issue 7582, 16 December 2015.
+        This article discusses myths related to screening to detect cancer, 
+        antioxidants versus free radicals, the uniqueness of the human brain, learning styles, human population growth,
+        and several medical myths from a poll among doctors.
+      </li>
+    </ul>
     <!-- Mike Sutton: Spinach Iron Decimal Point Error Myth Busted. Tuesday, 21 December 2010: http://super-myths.blogspot.com.es/2010/12/spinach-iron-decimal-point-error-myth.html -->
     <!-- We use only 5% / 10% of our brain, e.g. as claimed by By Eason: https://www.youtube.com/watch?v=4Qlu3TJLJX4 
       Bo Eason even claims that a Harvard professor said (2'40'' - 3'04''): "The average human being uses 5% of their brain capacity. High achievers use 20% of their brain capacity. Olympic gold medalists use 40% of their brain capacity, because mastery is the highest form of intelligence."
