+ Faith and Science.

--- a/philosophy/religion.html
+++ b/philosophy/religion.html
@@ -142,6 +142,16 @@
       </li>
     </ul>
 
+    <h2>Faith and Science</h2>
+    <ul>
+      <li>David Pakman Show:
+        <a href="https://www.youtube.com/watch?v=BlWBsYx0Pag">What the Religious Don't Understand About Science</a>
+        (YouTube, 14 minutes, 06.07.2016): interview with Sean Carroll, theoretical physicist at the California Institute of Technology
+        and author of <i class="booktitle">The Big Picture: On the Origins of Life, Meaning, and the Universe Itself</i>
+        (Penguin Random House, 2016, <a href="http://www.penguinrandomhouse.com/books/316646/the-big-picture-by-sean-carroll/9781101984253/"><abbr>ISBN</abbr> 9781101984253</a>).
+      </li>
+    </ul>
+
     <h2>Other Resources</h2>
     <ul>
       <li><span lang="de">Alm, Niko</span>:
