YT: film from Projekt Nauka.

--- a/philscience/fleck_ludwik.html
+++ b/philscience/fleck_ludwik.html
@@ -841,6 +841,11 @@
         <a href="http://segr-did2.fmag.unict.it/~polphil/PolHome.html" class="website">Polish Philosophy</a>
         (no updates since 2005).
       </li>
+      <li>Projekt Nauka:
+        <a href="https://www.youtube.com/watch?v=QYwo4nBpY1g">Ludwik Fleck’s theory of thought styles and thought collectives – translations and receptions</a>
+        (YouTube, 67 minutes, 03.12.2016):
+        <q>This film is an impression of the conference titled "Ludwik Fleck’s theory of thought styles and thought collectives – translations and receptions" that took place in Wrocław (Poland) 10-11.03.2016.</q>
+      </li>
       <li>Szybalski, Waclaw:
         <a href="http://lwow.home.pl/weigl/in-memoriam.html">The genius of Rudolf Stefan Weigl (1883-1957), a Lvovian microbe hunter and breeder. In memoriam</a>,
         <!-- @@CSS -> proceedings -->
