Beigel: YT video on Weigle and Fleck.

--- a/philscience/fleck_ludwik.html
+++ b/philscience/fleck_ludwik.html
@@ -564,6 +564,9 @@
         starting in the First World War. Ludwik Fleck initially worked in Weigl's laboratory;
         he also developed another typhus vaccine in the <span lang="de">Buchenwald</span> concentration camp.
         The book discusses Fleck's philosophy of science only in passing.
+        <br />See also: Michael Beigel:
+        <a href="https://www.youtube.com/watch?v=heUnD_h5Pcs">"The Good Louse": The Fantastic Laboratory of Dr. Weigl and Dr. Fleck</a>
+        (YouTube, 56 minutes, 15.06.2016; in Hebrew).
       </li>
       <li>Andersen, Hanne; Hepburn, Brian: 
         <a href="http://www.iep.utm.edu/s-change/">Scientific Change</a>,
