Hume: G. Haselhurst, C. Delistraty.

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1054,6 +1054,14 @@
         <a href="https://www.youtube.com/watch?v=gMBgnAINT1o">three favourite philosophers of Nigel Warburton</a>
         (the others being Socrates and John Stuart Mill).
       </li>
+      <li>Geoff Haselhurst:
+        <a href="http://www.spaceandmotion.com/Philosophy-David-Hume-Philosopher.htm">David Hume</a>,
+        <i class="website">On Truth &amp; Reality: The Wave Structure of Matter (<abbr>WSM</abbr>) in Space</i>.
+      </li>
+      <li>Cody Delistraty:
+        <a href="http://nautil.us/blog/why-david-hume-is-so-hot-right-now">Why David Hume Is So Hot Right Now</a>,
+        <i class="website">Nautilus</i>, 30.05.2016.
+      </li>
     </ul>
     <!-- Daniel Dennett: "Hume's Strange Inversion of Reasoning", Moscow State University in June 2012: https://www.youtube.com/watch?v=wY9Xm5xgiEE (not mainly focused on Hume, actually) See also https://www.youtube.com/watch?v=cesVHCzw22E -->
 
